<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">WildBoarTraining</string>
    <string name="title_lable">Menu</string>
    <string name="createPlan_lable">Stwórz plan</string>
    <string name="showPlan_lable">Pokaż plan</string>
    <string name="option_lable">Opcje</string>
    <string name="exit_lable">Wyjscie</string>
    <string name="connect_server_lable">Połączenie z serverem</string>
    <string name="connect_button_lable">Połącz</string>
    <string name="username">Nazwa użytkownika</string>
    <string name="password">Hasło</string>
    <string name="signin">Zaloguj</string>
    <string name="cancel">Anuluj</string>
    <string name="first_name">Imię</string>
    <string name="last_name">Nazwisko</string>
    <string name="email">Adres email</string>
    <string name="phone_number">Numer telefonu</string>
    <string name="sms_verify">Weryfikacja sms</string>
    <string name="registry">Rejestruj</string>
    <string name="email_verify">Weryfickaja email</string>
    <string name="verify_code">Wprowadź kod weryfikacjyjny</string>
    <string name="log_in">Zaloguj</string>
    <string name="go_next_hint">Aby przejść dalej przesuń ekran w prawo</string>
    <string name="go_back_next_hint">Przesuń w lewo lub prawo ekran aby wrócić lub iść dalej</string>
    <string name="remember_signin">Zaloguj automatycznie</string>

</resources>
