<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign_up_survey"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/greybackground"
    tools:context="com.example.karol.wildboartraining.SignUpSurveyActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:layout_width="500dp"
        android:gravity="center"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true">

        <TextView
            android:text="Rejestracja"
            android:layout_width="match_parent"
            android:layout_height="74dp"
            android:id="@+id/textView6"
            android:gravity="center"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:hint="@string/username"
            android:id="@+id/login_up_sur"
            android:gravity="center_vertical|center"
            android:textColorHint="@color/white" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/password_up_sur"
            android:hint="@string/password"
            android:gravity="center_vertical|center"
            android:textColorHint="@color/white" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/first_name_sur"
            android:hint="@string/first_name"
            android:gravity="center_vertical|center_horizontal"
            android:textColorHint="@color/white" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/last_name_sur"
            android:hint="@string/last_name"
            android:textColorHint="@color/white"
            android:gravity="center_vertical|center" />

        <TextView
            android:text="@string/go_next_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:gravity="center" />
    </LinearLayout>
</RelativeLayout>
