<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_menu_activiti"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#ffffff"
    tools:context="com.example.karol.wildboartraining.MenuActivity">


    <Button
        android:text="@string/createPlan_lable"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="121dp"
        android:id="@+id/createPlan_button"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/showPlan_lable"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:id="@+id/showPlan_lable"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/createPlan_button"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/option_lable"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="43dp"
        android:id="@+id/option_button"
        android:layout_below="@+id/showPlan_lable"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/exit_lable"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:id="@+id/exit_button"
        android:layout_below="@+id/option_button"
        android:onClick="ClickExit"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/wildboarmenu"
        android:id="@+id/imageView2"
        android:layout_centerVertical="true"
        android:scaleType = "centerCrop"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
